--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/leaflet": "^1.9.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.7.0",
     "genkit": "^1.8.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.5.1",
     "next": "15.2.3",
